# Loan-originator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  loan_originator_sdd_v2.docx  pyproject.toml  requirements.txt
Workflow/: AI_logic.py  README.md  docker-compose.yml  implementation_plan.md  init-vectordb.sql  ollama_chat.py  pdf_vectorize.py
Workflow/backend/: init-vectordb.sql
Workflow/backend/ai_service/: AI_logic.py  Dockerfile  main.py  requirements.txt
Workflow/backend/id_extractor/: Dockerfile  extractor.py  main.py  requirements.txt
Workflow/backend/signature/: Dockerfile  main.py  requirements.txt
Workflow/backend/vector_service/: Dockerfile  main.py  pdf_vectorize.py  requirements.txt
Workflow/dummy_failed_sample/: failed.py
Workflow/dummy_policy/: PDF.py
Workflow/dummy_success_sample/: pass.py
Workflow/frontend/: app.py
scripts/: try_chandra1.py  try_chandra2.py
src/: main.py
src/ai/: __init__.py  egyptian_nid_validator.py  model_handler_chandra.py  model_handler_chandra2.py  model_handler_lighton.py  nlp.py  ocr.py  signature.py
src/api/: main.py
src/core/: config.py
src/models/: application.py
src/services/financial/: __init__.py
src/utils/: audit.py  pdf_gen.py
